# PetCare

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  schema.sql
.claude/: settings.local.json
contracts/: campaign_council.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: campaigns.js  donations.js
frontend/src/components/: CampaignCard.jsx  CampaignReviewModal.jsx  DonationModal.jsx  Footer.jsx  Header.jsx  Introduction.jsx  ScrollToHash.jsx  Stats.jsx
frontend/src/data/: campaigns.js
frontend/src/pages/: CreateCampaign.jsx  Home.jsx
src/ai/: exceptions.py  models.py
src/ai/council/: orchestrator.py
src/blockchain/: client.py
src/campaigns/: exceptions.py  models.py  repository.py  router.py  service.py
src/donations/: exceptions.py  models.py  repository.py  router.py  service.py
src/shared/: auth.py  config.py  database.py  exceptions.py
src/users/: exceptions.py  models.py  repository.py  router.py  service.py
